--- a/hs_tools_resource/static/css/toolresource.css
+++ b/hs_tools_resource/static/css/toolresource.css
@@ -27,10 +27,10 @@
 }
 
 .file-options-webapp-icon {
-    width: 20px;
-    height: 20px;
+    width: 22px;
+    height: 22px;
     border-radius: 2px;
-    margin: 2px;
+    margin-right: 10px;
 }
 
 .dropdown-default-webapp-icon {
