Remove unintended id attribute from dismiss button

--- a/theme/templates/resource-landing-page/modals.html
+++ b/theme/templates/resource-landing-page/modals.html
@@ -1808,7 +1808,7 @@
             </div>
 
             <div class="modal-footer">
-                <button type="button" id="btn-confirm-zip" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
             </div>
         </div>
     </div>
