Admin tab added

--- a/hs_communities/templates/hs_communities/community.html
+++ b/hs_communities/templates/hs_communities/community.html
@@ -36,6 +36,10 @@
                         <a href="#public" aria-controls="public" role="tab" data-toggle="tab">
                             <i class="glyphicon glyphicon-file"></i>&nbsp;PUBLIC</a>
                     </li>
+                    <li role="presentation">
+                        <a href="#admin" aria-controls="admin" role="tab" data-toggle="tab">
+                            <i class="glyphicon glyphicon-file"></i>&nbsp;ADMIN</a>
+                    </li>
                 </ul>
 
                 <!-- Tab panes -->
@@ -187,6 +191,17 @@
                             </div>
                         </div>
                     </div>
+                    <div role="tabpanel" class="tab-pane fade in" id="admin">
+                        <div class="row">
+                            <div class="col-sm-12 col-md-3">
+                                <a href="/topics/">Edit Topics</a>
+                                - Someone has requested a topic to be created or modified for use in the Title Assistant
+                            </div>
+                        </div>
+                    </div>
+
+
+
                 </div>
             </div>
         </div>
