Set communities standard width 800px

--- a/hs_communities/templates/hs_communities/community.html
+++ b/hs_communities/templates/hs_communities/community.html
@@ -43,7 +43,7 @@
                 </ul>
 
                 <!-- Tab panes -->
-                <div class="tab-content">
+                <div class="tab-content" style="size: 800px">
                     <!-- PUBLIC -->
                     <div role="tabpanel" class="tab-pane fade in active" id="public">
                         <div class="row">
@@ -199,9 +199,6 @@
                             </div>
                         </div>
                     </div>
-
-
-
                 </div>
             </div>
         </div>
