--- a/hs_communities/templates/hs_communities/community.html
+++ b/hs_communities/templates/hs_communities/community.html
@@ -58,26 +58,26 @@
                                     <div id="filter-shared-by" class="facet-list panel-collapse collapse in">
                                         <div class="panel-body">
                                             <div class="list-group">
-                                            </div>
+
                                             <div id="groups-list"><!-- this id=groups-list is used to construct the VueJS group name to id map -->
                                                 {% if not groups %}
                                                     <i class="list-group-item no-items-found">No resources have been
                                                         shared with this community yet.</i>
                                                 {% else %}
+                                                    <ul class="list-group inputs-group">
                                                     {% for g in groups %}
                                                         <li class="list-group-item" id="{{ g.id }}">
-
-                                                            <label class="checkbox noselect"
-                                                                 for="{{ g.id }}">{{ g.name }}&nbsp;<span class="badge">{{ g.res_count }}</span><input type="checkbox" id="{{ g.id }}" value="Click"
-                                                                    @click="updateContribs({{ g.id }})"
-                                                            {% if grpfilter == g.name %}
+                                                        <span data-facet="czo sierra" class="badge">{{ g.res_count }}</span>
+                                                            <label class="checkbox noselect"><input id="{{ g.id }}" type="checkbox" data-facet="asdf" value="Click" @click="updateContribs({{ g.id }})"> {{ g.name }}
+                                                             {% if grpfilter == g.name %}
                                                                  checked
                                                             {% endif %}
-                                                            />
                                                             </label>
                                                         </li>
                                                     {% endfor %}
+                                                    </ul>
                                                 {% endif %}
+                                            </div>
                                             </div>
                                         </div>
                                     </div>
