Increase facets height

--- a/hs_communities/templates/hs_communities/community.html
+++ b/hs_communities/templates/hs_communities/community.html
@@ -56,7 +56,8 @@
                                             <a data-toggle="collapse" class="accordion-toggle" data-parent="#accordion"
                                                href="#filter">&nbsp;Shared by</a></h4>
                                     </div>
-                                    <div id="filter-shared-by" style="height: 100%" class="facet-list panel-collapse collapse in">
+{#                                TODO PULL REQUEST ensure fixed height acceptable#}
+                                    <div id="filter-shared-by" style="height: 350px" class="facet-list panel-collapse collapse in">
                                         <div class="panel-body">
                                             <div class="list-group">
 
