Change height of facet out element

--- a/hs_communities/templates/hs_communities/community.html
+++ b/hs_communities/templates/hs_communities/community.html
@@ -57,8 +57,8 @@
                                                href="#filter">&nbsp;Shared by</a></h4>
                                     </div>
 {#                                TODO PULL REQUEST ensure fixed height acceptable#}
-                                    <div id="filter-shared-by" style="height: 350px" class="facet-list panel-collapse collapse in">
-                                        <div class="panel-body">
+                                    <div id="filter-shared-by" class="facet-list panel-collapse collapse in">
+                                        <div class="panel-body" style="height: 300px">
                                             <div class="list-group">
 
                                                 <div id="groups-list">
