--- a/theme/templates/generic/includes/comments.html
+++ b/theme/templates/generic/includes/comments.html
@@ -14,8 +14,7 @@ $(function() {
 </script>
 {% comment_thread object_for_comments %}
 <h3>{% trans "New Comment" %}</h3>
-{#    TODO IN PULL REQUEST AND QA PROCESS, ENSURE ALL ASPECTS OF COMMENTS THOROUGHTLY TESTED#}
-<form method="post" id="comment-form" class="comment-form" action="/comment/#comment">
+<form method="post" id="comment" class="comment-form" action="/comment/#comment">
     {% if not request.POST.replied_to %}
     {% fields_for posted_comment_form %}
     {% else %}
