Double max heigh allowed for facet-list

--- a/hs_communities/templates/hs_communities/community.html
+++ b/hs_communities/templates/hs_communities/community.html
@@ -56,7 +56,7 @@
                                             &nbsp;Shared by</h4>
                                     </div>
 {#                                TODO PULL REQUEST ensure fixed height acceptable#}
-                                    <div id="filter-shared-by" class="facet-list panel-collapse collapse in">
+                                    <div id="filter-shared-by" class="facet-list">
                                         <div class="panel-body">
                                             <div class="list-group">
                                                 <div id="groups-list">
