Fix listbox filtering

--- a/hs_core/templates/pages/topics.html
+++ b/hs_core/templates/pages/topics.html
@@ -7,8 +7,6 @@
 {% block main %}
     <div id="topics-app">
         <div style="margin-left: 2em">
-            {#                <a href="{{ request.META.HTTP_REFERER }}">back to communities admin</a>#}
-            {#TODO get URLs.py to incorporate the #admin or otherwise fix the community.html page#}
             <a href="/community/1/#admin">back to communities admin</a>
             <h3>Inline Topic Edit</h3>
             <input id="add-topic" type="text" v-model="newTopic" placeholder="Enter new topic"/>
@@ -30,51 +28,10 @@
         </div>
     <script type="text/javascript" src="{{ STATIC_URL }}js/vue-2.6.10-dev.js"></script>
     <script type="application/javascript">
+        // TODO INVESTIGATE IF THIS CAN BE DONE WITH A VUE COMPONENT AND PASSING THIS var/let/const VIA PROPS
         // contents here are required by topics.js
         const topics_from_page = JSON.parse("{{ topics_json }}");
     </script>
 
     <script type="text/javascript" src="{{ STATIC_URL }}js/topics.js"></script>
 {% endblock main %}
-
-{#{% block extra_js %}#}
-{#    {{ block.super }}#}
-{#    <script type="text/javascript" src="{{ STATIC_URL }}js/jquery-3.4.1.min.js"></script>#}
-{#    <script type="text/javascript" src="{{ STATIC_URL }}js/vue-2.6.10-dev.js"></script>#}
-{#    <script type="application/javascript">#}
-{#        // contents here are required by topics.js#}
-{#        const topics_from_page = JSON.parse("{{ topics_json }}");#}
-{#    </script>#}
-{##}
-{#    <script type="text/javascript" src="{{ STATIC_URL }}js/topics.js"></script>#}
-{#{% endblock %}#}
-
-
-{#{% block main %}#}
-{#    <!DOCTYPE html>#}
-{#    <html lang="en">#}
-{#    <head>#}
-{#        <meta charset="UTF-8">#}
-{#        <title>Topics Editor</title>#}
-{#        <link rel="shortcut icon" href="/">#}
-{#    </head>#}
-{#    <body>#}
-{#    <div id="topics-app">#}
-{#        <h2>Edit Topics</h2>#}
-{#        <input id="add-topic" type="text" v-model="newTopic"/>#}
-{#        <button v-on:click="addTopic('{{ csrf_token }}', )">Add Topic</button>#}
-{#        <template>#}
-{#            <ul>#}
-{#                <li v-for="number in numbers">#}
-{#                    <span v-show="!number.edit" v-on:click="toggleEdit(this, number)">{% templatetag openvariable %} number.val[1] {% templatetag closevariable %}</span>#}
-{#                    <input type="text" v-model="number.val[1]" v-show="number.edit"#}
-{#                           v-on:blur="saveEdit('{{ csrf_token }}', this, number)"/>#}
-{#                    <span style="cursor:pointer" v-on:click="deleteTopic('{{ csrf_token }}', number.val[0])">X</span>#}
-{#                </li>#}
-{#            </ul>#}
-{#        </template>#}
-{#    </div>#}
-{#    </body>#}
-{#    </html>#}
-{#{% endblock %}#}
-
